<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quantum Dice</string>
    <string name="default_result">--</string>
    <string name="menu_settings">Settings</string>
    <string name="go">Go</string>
    <string name="coin_flip">Coin Flip</string>
    <string name="dice_roll">Dice Roll</string>
    <string name="custom">Custom</string>
    <string name="default_custom">10</string>
    <string name="loading">&#8230;</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="network_issue">Issue contacting random number server</string>
    <string name="option_reseed_checked">&#x2714; Reseed each time</string>
    <string name="option_reseed_unchecked">&#x2718; Reseed each time</string>
    <string name="option_manual_seed">Manual Reseed</string>

</resources>