<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/default_result"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:checkedButton="@+id/radioCoin"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radioCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_flip" />

            <RadioButton
                android:id="@+id/radioDice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dice_roll" />

            <RadioButton
                android:id="@+id/radioCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioCustomClicked"
                android:text="@string/custom" />

            <EditText
                android:id="@+id/editTextCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:inputType="number"
                android:text="@string/default_custom" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onButtonGoClicked"
            android:text="@string/go" />
    </LinearLayout>

</LinearLayout>